--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ seaborn
 textblob
 nltk==3.8.1; python_version >= '3.7'
 scikit-learn
-transformers
+transformers==4.41.2
 transformers-interpret
 torch
 scipy
