--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-numpy
-pandas
-matplotlib
-streamlit
-seaborn
+numpy==1.24.3
+pandas==2.0.3
+matplotlib==3.7.5
+streamlit==1.35.0
+seaborn==0.13.2
 textblob
 nltk==3.8.1; python_version >= '3.7'
 scikit-learn
-scipy
-torch
+scipy==1.9.1
+torch==2.3.0
 transformers==4.41.2
-deep_translator
-wordcloud
+deep_translator==1.9.1
+wordcloud==1.9.3
